[tool.poetry]
name = "testenv"
version = "0.1.0"
description = "this is my first time using poetry"
authors = ["Ruud op den Kelder <ruudodk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
